bk_ida/gccida/g0/optimize_inline_calls
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_inline_calls/src/tree-inline.c:1479:1: error: unknown type name 'inline_data_0'; did you mean 'inline_data'?
inline_data_0 id; // [rsp+10h] [rbp-60h] BYREF 
^~~~~~~~~~~~~
inline_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_inline_calls/src/tree-inline.c:101:3: note: 'inline_data' declared here
} inline_data;
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_inline_calls/src/tree-inline.c:1502:11: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
prev_fn = lang_hooks_0.tree_inlining.add_pending_fn_decls( &id, prev_fn); 
          ^~~~~~~~~~~~
          lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_inline_calls/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_inline_calls/src/tree-inline.c:1502:58: error: called object type '<dependent type>' is not a function or function pointer
prev_fn = lang_hooks_0.tree_inlining.add_pending_fn_decls( &id, prev_fn); 
                                                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_inline_calls/src/obj/tree-inline.o] Error 1
